--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -56,10 +56,28 @@
 
         grid-template-columns: 1fr;
     }
-}
 
-@include mediaSm {
-    main#home h1 {
-        margin-top: 10vh;
+    .projects {
+        grid-template-columns: repeat(2, 1fr);
     }
 }
+
+
+
+@include mediaSm {
+    main {
+      padding: 2rem;
+      #home h1 {
+        margin-top: 10vh;
+      }
+  
+      .lg-heading {
+        margin-top:1rem;
+        font-size: 5rem;
+      }
+    }
+  
+    .projects {
+      grid-template-columns: 1fr;
+    }
+  }
